// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseAndGenerateServices invalid file error messages "parserOptions.extraFileExtensions" is empty the extension does not match 1`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/other/unknownFileType.unknown\` using \`parserOptions.project\`: <tsconfigRootDir>/tsconfig.json
The extension for the file (\`.unknown\`) is non-standard. You should add \`parserOptions.extraFileExtensions\` to your config."
`;

exports[`parseAndGenerateServices invalid file error messages "parserOptions.extraFileExtensions" is non-empty invalid extension 1`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/other/unknownFileType.unknown\` using \`parserOptions.project\`: <tsconfigRootDir>/tsconfig.json
Found unexpected extension \`unknown\` specified with the \`parserOptions.extraFileExtensions\` option. Did you mean \`.unknown\`?
The extension for the file (\`.unknown\`) is non-standard. It should be added to your existing \`parserOptions.extraFileExtensions\`."
`;

exports[`parseAndGenerateServices invalid file error messages "parserOptions.extraFileExtensions" is non-empty the extension does not match 1`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/other/unknownFileType.unknown\` using \`parserOptions.project\`: <tsconfigRootDir>/tsconfig.json
The extension for the file (\`.unknown\`) is non-standard. It should be added to your existing \`parserOptions.extraFileExtensions\`."
`;

exports[`parseAndGenerateServices invalid file error messages "parserOptions.extraFileExtensions" is non-empty the extension matches duplicate extension 1`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/ts/notIncluded.ts\` using \`parserOptions.project\`: <tsconfigRootDir>/tsconfig.json
You unnecessarily included the extension \`.ts\` with the \`parserOptions.extraFileExtensions\` option. This extension is already handled by the parser by default.
However, that TSConfig does not include this file. Either:
- Change ESLint's list of included files to not include this file
- Change that TSConfig to include this file
- Create a new TSConfig that includes this file and include it in your parserOptions.project
See the TypeScript ESLint docs for more info: https://typescript-eslint.io/docs/linting/troubleshooting##i-get-errors-telling-me-eslint-was-configured-to-run--however-that-tsconfig-does-not--none-of-those-tsconfigs-include-this-file"
`;

exports[`parseAndGenerateServices invalid file error messages "parserOptions.extraFileExtensions" is non-empty the extension matches the file isn't included 1`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/other/notIncluded.vue\` using \`parserOptions.project\`: <tsconfigRootDir>/tsconfig.json
However, that TSConfig does not include this file. Either:
- Change ESLint's list of included files to not include this file
- Change that TSConfig to include this file
- Create a new TSConfig that includes this file and include it in your parserOptions.project
See the TypeScript ESLint docs for more info: https://typescript-eslint.io/docs/linting/troubleshooting##i-get-errors-telling-me-eslint-was-configured-to-run--however-that-tsconfig-does-not--none-of-those-tsconfigs-include-this-file"
`;

exports[`parseAndGenerateServices invalid file error messages project includes errors for not included files 1`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/ts/notIncluded0j1.ts\` using \`parserOptions.project\`: <tsconfigRootDir>/tsconfig.json
However, that TSConfig does not include this file. Either:
- Change ESLint's list of included files to not include this file
- Change that TSConfig to include this file
- Create a new TSConfig that includes this file and include it in your parserOptions.project
See the TypeScript ESLint docs for more info: https://typescript-eslint.io/docs/linting/troubleshooting##i-get-errors-telling-me-eslint-was-configured-to-run--however-that-tsconfig-does-not--none-of-those-tsconfigs-include-this-file"
`;

exports[`parseAndGenerateServices invalid file error messages project includes errors for not included files 2`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/ts/notIncluded02.tsx\` using \`parserOptions.project\`: <tsconfigRootDir>/tsconfig.json
However, that TSConfig does not include this file. Either:
- Change ESLint's list of included files to not include this file
- Change that TSConfig to include this file
- Create a new TSConfig that includes this file and include it in your parserOptions.project
See the TypeScript ESLint docs for more info: https://typescript-eslint.io/docs/linting/troubleshooting##i-get-errors-telling-me-eslint-was-configured-to-run--however-that-tsconfig-does-not--none-of-those-tsconfigs-include-this-file"
`;

exports[`parseAndGenerateServices invalid file error messages project includes errors for not included files 3`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/js/notIncluded01.js\` using \`parserOptions.project\`: <tsconfigRootDir>/tsconfig.json
However, that TSConfig does not include this file. Either:
- Change ESLint's list of included files to not include this file
- Change that TSConfig to include this file
- Create a new TSConfig that includes this file and include it in your parserOptions.project
See the TypeScript ESLint docs for more info: https://typescript-eslint.io/docs/linting/troubleshooting##i-get-errors-telling-me-eslint-was-configured-to-run--however-that-tsconfig-does-not--none-of-those-tsconfigs-include-this-file"
`;

exports[`parseAndGenerateServices invalid file error messages project includes errors for not included files 4`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/js/notIncluded02.jsx\` using \`parserOptions.project\`: <tsconfigRootDir>/tsconfig.json
However, that TSConfig does not include this file. Either:
- Change ESLint's list of included files to not include this file
- Change that TSConfig to include this file
- Create a new TSConfig that includes this file and include it in your parserOptions.project
See the TypeScript ESLint docs for more info: https://typescript-eslint.io/docs/linting/troubleshooting##i-get-errors-telling-me-eslint-was-configured-to-run--however-that-tsconfig-does-not--none-of-those-tsconfigs-include-this-file"
`;

exports[`parseAndGenerateServices invalid project error messages throws when non of multiple projects include the file 1`] = `
"ESLint was configured to run on \`<tsconfigRootDir>/ts/notIncluded0j1.ts\` using \`parserOptions.project\`: 
- <tsconfigRootDir>/tsconfig.json
- <tsconfigRootDir>/tsconfig.extra.json
However, none of those TSConfigs include this file. Either:
- Change ESLint's list of included files to not include this file
- Change one of those TSConfigs to include this file
- Create a new TSConfig that includes this file and include it in your parserOptions.project
See the TypeScript ESLint docs for more info: https://typescript-eslint.io/docs/linting/troubleshooting##i-get-errors-telling-me-eslint-was-configured-to-run--however-that-tsconfig-does-not--none-of-those-tsconfigs-include-this-file"
`;

exports[`parseAndGenerateServices isolated parsing should parse .js file - with JSX content - parserOptions.jsx = false 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "children": [],
              "closingElement": null,
              "loc": {
                "end": {
                  "column": 17,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "openingElement": {
                "attributes": [],
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 1,
                  },
                  "start": {
                    "column": 10,
                    "line": 1,
                  },
                },
                "name": {
                  "loc": {
                    "end": {
                      "column": 14,
                      "line": 1,
                    },
                    "start": {
                      "column": 11,
                      "line": 1,
                    },
                  },
                  "name": "div",
                  "range": [
                    11,
                    14,
                  ],
                  "type": "JSXIdentifier",
                },
                "range": [
                  10,
                  17,
                ],
                "selfClosing": true,
                "type": "JSXOpeningElement",
                "typeParameters": undefined,
              },
              "range": [
                10,
                17,
              ],
              "type": "JSXElement",
            },
            "loc": {
              "end": {
                "column": 17,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              17,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          18,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      18,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Punctuator",
        "value": "<",
      },
      {
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
          },
          "start": {
            "column": 11,
            "line": 1,
          },
        },
        "range": [
          11,
          14,
        ],
        "type": "JSXIdentifier",
        "value": "div",
      },
      {
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
          },
          "start": {
            "column": 15,
            "line": 1,
          },
        },
        "range": [
          15,
          16,
        ],
        "type": "Punctuator",
        "value": "/",
      },
      {
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
          },
          "start": {
            "column": 16,
            "line": 1,
          },
        },
        "range": [
          16,
          17,
        ],
        "type": "Punctuator",
        "value": ">",
      },
      {
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 17,
            "line": 1,
          },
        },
        "range": [
          17,
          18,
        ],
        "type": "Punctuator",
        "value": ";",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .js file - with JSX content - parserOptions.jsx = true 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "children": [],
              "closingElement": null,
              "loc": {
                "end": {
                  "column": 17,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "openingElement": {
                "attributes": [],
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 1,
                  },
                  "start": {
                    "column": 10,
                    "line": 1,
                  },
                },
                "name": {
                  "loc": {
                    "end": {
                      "column": 14,
                      "line": 1,
                    },
                    "start": {
                      "column": 11,
                      "line": 1,
                    },
                  },
                  "name": "div",
                  "range": [
                    11,
                    14,
                  ],
                  "type": "JSXIdentifier",
                },
                "range": [
                  10,
                  17,
                ],
                "selfClosing": true,
                "type": "JSXOpeningElement",
                "typeParameters": undefined,
              },
              "range": [
                10,
                17,
              ],
              "type": "JSXElement",
            },
            "loc": {
              "end": {
                "column": 17,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              17,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          18,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      18,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Punctuator",
        "value": "<",
      },
      {
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
          },
          "start": {
            "column": 11,
            "line": 1,
          },
        },
        "range": [
          11,
          14,
        ],
        "type": "JSXIdentifier",
        "value": "div",
      },
      {
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
          },
          "start": {
            "column": 15,
            "line": 1,
          },
        },
        "range": [
          15,
          16,
        ],
        "type": "Punctuator",
        "value": "/",
      },
      {
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
          },
          "start": {
            "column": 16,
            "line": 1,
          },
        },
        "range": [
          16,
          17,
        ],
        "type": "Punctuator",
        "value": ">",
      },
      {
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 17,
            "line": 1,
          },
        },
        "range": [
          17,
          18,
        ],
        "type": "Punctuator",
        "value": ";",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .js file - without JSX content - parserOptions.jsx = false 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .js file - without JSX content - parserOptions.jsx = true 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .json file - without JSX content - parserOptions.jsx = false 1`] = `
{
  "ast": {
    "body": [
      {
        "expression": {
          "loc": {
            "end": {
              "column": 10,
              "line": 1,
            },
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "properties": [
            {
              "computed": false,
              "key": {
                "loc": {
                  "end": {
                    "column": 5,
                    "line": 1,
                  },
                  "start": {
                    "column": 2,
                    "line": 1,
                  },
                },
                "range": [
                  2,
                  5,
                ],
                "raw": ""x"",
                "type": "Literal",
                "value": "x",
              },
              "kind": "init",
              "loc": {
                "end": {
                  "column": 8,
                  "line": 1,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                },
              },
              "method": false,
              "range": [
                2,
                8,
              ],
              "shorthand": false,
              "type": "Property",
              "value": {
                "loc": {
                  "end": {
                    "column": 8,
                    "line": 1,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                  },
                },
                "range": [
                  7,
                  8,
                ],
                "raw": "1",
                "type": "Literal",
                "value": 1,
              },
            },
          ],
          "range": [
            0,
            10,
          ],
          "type": "ObjectExpression",
        },
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          10,
        ],
        "type": "ExpressionStatement",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 10,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      10,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 1,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          1,
        ],
        "type": "Punctuator",
        "value": "{",
      },
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "range": [
          2,
          5,
        ],
        "type": "String",
        "value": ""x"",
      },
      {
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
          },
          "start": {
            "column": 5,
            "line": 1,
          },
        },
        "range": [
          5,
          6,
        ],
        "type": "Punctuator",
        "value": ":",
      },
      {
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
          },
          "start": {
            "column": 7,
            "line": 1,
          },
        },
        "range": [
          7,
          8,
        ],
        "type": "Numeric",
        "value": "1",
      },
      {
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
          },
          "start": {
            "column": 9,
            "line": 1,
          },
        },
        "range": [
          9,
          10,
        ],
        "type": "Punctuator",
        "value": "}",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .jsx file - with JSX content - parserOptions.jsx = false 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "children": [],
              "closingElement": null,
              "loc": {
                "end": {
                  "column": 17,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "openingElement": {
                "attributes": [],
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 1,
                  },
                  "start": {
                    "column": 10,
                    "line": 1,
                  },
                },
                "name": {
                  "loc": {
                    "end": {
                      "column": 14,
                      "line": 1,
                    },
                    "start": {
                      "column": 11,
                      "line": 1,
                    },
                  },
                  "name": "div",
                  "range": [
                    11,
                    14,
                  ],
                  "type": "JSXIdentifier",
                },
                "range": [
                  10,
                  17,
                ],
                "selfClosing": true,
                "type": "JSXOpeningElement",
                "typeParameters": undefined,
              },
              "range": [
                10,
                17,
              ],
              "type": "JSXElement",
            },
            "loc": {
              "end": {
                "column": 17,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              17,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          18,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      18,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Punctuator",
        "value": "<",
      },
      {
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
          },
          "start": {
            "column": 11,
            "line": 1,
          },
        },
        "range": [
          11,
          14,
        ],
        "type": "JSXIdentifier",
        "value": "div",
      },
      {
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
          },
          "start": {
            "column": 15,
            "line": 1,
          },
        },
        "range": [
          15,
          16,
        ],
        "type": "Punctuator",
        "value": "/",
      },
      {
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
          },
          "start": {
            "column": 16,
            "line": 1,
          },
        },
        "range": [
          16,
          17,
        ],
        "type": "Punctuator",
        "value": ">",
      },
      {
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 17,
            "line": 1,
          },
        },
        "range": [
          17,
          18,
        ],
        "type": "Punctuator",
        "value": ";",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .jsx file - with JSX content - parserOptions.jsx = true 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "children": [],
              "closingElement": null,
              "loc": {
                "end": {
                  "column": 17,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "openingElement": {
                "attributes": [],
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 1,
                  },
                  "start": {
                    "column": 10,
                    "line": 1,
                  },
                },
                "name": {
                  "loc": {
                    "end": {
                      "column": 14,
                      "line": 1,
                    },
                    "start": {
                      "column": 11,
                      "line": 1,
                    },
                  },
                  "name": "div",
                  "range": [
                    11,
                    14,
                  ],
                  "type": "JSXIdentifier",
                },
                "range": [
                  10,
                  17,
                ],
                "selfClosing": true,
                "type": "JSXOpeningElement",
                "typeParameters": undefined,
              },
              "range": [
                10,
                17,
              ],
              "type": "JSXElement",
            },
            "loc": {
              "end": {
                "column": 17,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              17,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          18,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      18,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Punctuator",
        "value": "<",
      },
      {
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
          },
          "start": {
            "column": 11,
            "line": 1,
          },
        },
        "range": [
          11,
          14,
        ],
        "type": "JSXIdentifier",
        "value": "div",
      },
      {
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
          },
          "start": {
            "column": 15,
            "line": 1,
          },
        },
        "range": [
          15,
          16,
        ],
        "type": "Punctuator",
        "value": "/",
      },
      {
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
          },
          "start": {
            "column": 16,
            "line": 1,
          },
        },
        "range": [
          16,
          17,
        ],
        "type": "Punctuator",
        "value": ">",
      },
      {
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 17,
            "line": 1,
          },
        },
        "range": [
          17,
          18,
        ],
        "type": "Punctuator",
        "value": ";",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .jsx file - without JSX content - parserOptions.jsx = false 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .jsx file - without JSX content - parserOptions.jsx = true 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .ts file - without JSX content - parserOptions.jsx = false 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .ts file - without JSX content - parserOptions.jsx = true 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .tsx file - with JSX content - parserOptions.jsx = false 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "children": [],
              "closingElement": null,
              "loc": {
                "end": {
                  "column": 17,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "openingElement": {
                "attributes": [],
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 1,
                  },
                  "start": {
                    "column": 10,
                    "line": 1,
                  },
                },
                "name": {
                  "loc": {
                    "end": {
                      "column": 14,
                      "line": 1,
                    },
                    "start": {
                      "column": 11,
                      "line": 1,
                    },
                  },
                  "name": "div",
                  "range": [
                    11,
                    14,
                  ],
                  "type": "JSXIdentifier",
                },
                "range": [
                  10,
                  17,
                ],
                "selfClosing": true,
                "type": "JSXOpeningElement",
                "typeParameters": undefined,
              },
              "range": [
                10,
                17,
              ],
              "type": "JSXElement",
            },
            "loc": {
              "end": {
                "column": 17,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              17,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          18,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      18,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Punctuator",
        "value": "<",
      },
      {
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
          },
          "start": {
            "column": 11,
            "line": 1,
          },
        },
        "range": [
          11,
          14,
        ],
        "type": "JSXIdentifier",
        "value": "div",
      },
      {
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
          },
          "start": {
            "column": 15,
            "line": 1,
          },
        },
        "range": [
          15,
          16,
        ],
        "type": "Punctuator",
        "value": "/",
      },
      {
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
          },
          "start": {
            "column": 16,
            "line": 1,
          },
        },
        "range": [
          16,
          17,
        ],
        "type": "Punctuator",
        "value": ">",
      },
      {
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 17,
            "line": 1,
          },
        },
        "range": [
          17,
          18,
        ],
        "type": "Punctuator",
        "value": ";",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .tsx file - with JSX content - parserOptions.jsx = true 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "children": [],
              "closingElement": null,
              "loc": {
                "end": {
                  "column": 17,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "openingElement": {
                "attributes": [],
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 1,
                  },
                  "start": {
                    "column": 10,
                    "line": 1,
                  },
                },
                "name": {
                  "loc": {
                    "end": {
                      "column": 14,
                      "line": 1,
                    },
                    "start": {
                      "column": 11,
                      "line": 1,
                    },
                  },
                  "name": "div",
                  "range": [
                    11,
                    14,
                  ],
                  "type": "JSXIdentifier",
                },
                "range": [
                  10,
                  17,
                ],
                "selfClosing": true,
                "type": "JSXOpeningElement",
                "typeParameters": undefined,
              },
              "range": [
                10,
                17,
              ],
              "type": "JSXElement",
            },
            "loc": {
              "end": {
                "column": 17,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              17,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          18,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      18,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Punctuator",
        "value": "<",
      },
      {
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
          },
          "start": {
            "column": 11,
            "line": 1,
          },
        },
        "range": [
          11,
          14,
        ],
        "type": "JSXIdentifier",
        "value": "div",
      },
      {
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
          },
          "start": {
            "column": 15,
            "line": 1,
          },
        },
        "range": [
          15,
          16,
        ],
        "type": "Punctuator",
        "value": "/",
      },
      {
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
          },
          "start": {
            "column": 16,
            "line": 1,
          },
        },
        "range": [
          16,
          17,
        ],
        "type": "Punctuator",
        "value": ">",
      },
      {
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 17,
            "line": 1,
          },
        },
        "range": [
          17,
          18,
        ],
        "type": "Punctuator",
        "value": ";",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .tsx file - without JSX content - parserOptions.jsx = false 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .tsx file - without JSX content - parserOptions.jsx = true 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .vue file - with JSX content - parserOptions.jsx = true 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "children": [],
              "closingElement": null,
              "loc": {
                "end": {
                  "column": 17,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "openingElement": {
                "attributes": [],
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 1,
                  },
                  "start": {
                    "column": 10,
                    "line": 1,
                  },
                },
                "name": {
                  "loc": {
                    "end": {
                      "column": 14,
                      "line": 1,
                    },
                    "start": {
                      "column": 11,
                      "line": 1,
                    },
                  },
                  "name": "div",
                  "range": [
                    11,
                    14,
                  ],
                  "type": "JSXIdentifier",
                },
                "range": [
                  10,
                  17,
                ],
                "selfClosing": true,
                "type": "JSXOpeningElement",
                "typeParameters": undefined,
              },
              "range": [
                10,
                17,
              ],
              "type": "JSXElement",
            },
            "loc": {
              "end": {
                "column": 17,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              17,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          18,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      18,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Punctuator",
        "value": "<",
      },
      {
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
          },
          "start": {
            "column": 11,
            "line": 1,
          },
        },
        "range": [
          11,
          14,
        ],
        "type": "JSXIdentifier",
        "value": "div",
      },
      {
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
          },
          "start": {
            "column": 15,
            "line": 1,
          },
        },
        "range": [
          15,
          16,
        ],
        "type": "Punctuator",
        "value": "/",
      },
      {
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
          },
          "start": {
            "column": 16,
            "line": 1,
          },
        },
        "range": [
          16,
          17,
        ],
        "type": "Punctuator",
        "value": ">",
      },
      {
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
          },
          "start": {
            "column": 17,
            "line": 1,
          },
        },
        "range": [
          17,
          18,
        ],
        "type": "Punctuator",
        "value": ";",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .vue file - without JSX content - parserOptions.jsx = false 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseAndGenerateServices isolated parsing should parse .vue file - without JSX content - parserOptions.jsx = true 1`] = `
{
  "ast": {
    "body": [
      {
        "declarations": [
          {
            "id": {
              "loc": {
                "end": {
                  "column": 7,
                  "line": 1,
                },
                "start": {
                  "column": 6,
                  "line": 1,
                },
              },
              "name": "x",
              "range": [
                6,
                7,
              ],
              "type": "Identifier",
            },
            "init": {
              "loc": {
                "end": {
                  "column": 11,
                  "line": 1,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                },
              },
              "range": [
                10,
                11,
              ],
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "range": [
              6,
              11,
            ],
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          11,
        ],
        "type": "VariableDeclaration",
      },
    ],
    "comments": [],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "range": [
      0,
      11,
    ],
    "sourceType": "script",
    "tokens": [
      {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "type": "Keyword",
        "value": "const",
      },
      {
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "range": [
          6,
          7,
        ],
        "type": "Identifier",
        "value": "x",
      },
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "Punctuator",
        "value": "=",
      },
      {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "range": [
          10,
          11,
        ],
        "type": "Numeric",
        "value": "1",
      },
    ],
    "type": "Program",
  },
  "services": {
    "esTreeNodeToTSNodeMap": WeakMap {},
    "hasFullTypeInformation": false,
    "program": {},
    "tsNodeToESTreeNodeMap": WeakMap {},
  },
}
`;

exports[`parseWithNodeMaps() general output should not contain loc 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "foo",
            "range": [
              4,
              7,
            ],
            "type": "Identifier",
          },
          "init": {
            "name": "bar",
            "range": [
              10,
              13,
            ],
            "type": "Identifier",
          },
          "range": [
            4,
            13,
          ],
          "type": "VariableDeclarator",
        },
      ],
      "kind": "let",
      "range": [
        0,
        14,
      ],
      "type": "VariableDeclaration",
    },
  ],
  "range": [
    0,
    14,
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`parseWithNodeMaps() general output should not contain range 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "loc": {
              "end": {
                "column": 7,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "foo",
            "type": "Identifier",
          },
          "init": {
            "loc": {
              "end": {
                "column": 13,
                "line": 1,
              },
              "start": {
                "column": 10,
                "line": 1,
              },
            },
            "name": "bar",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 13,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "let",
      "loc": {
        "end": {
          "column": 14,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "type": "VariableDeclaration",
    },
  ],
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`parseWithNodeMaps() general output tokens, comments, locs, and ranges when called with those options 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "loc": {
              "end": {
                "column": 7,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "foo",
            "range": [
              4,
              7,
            ],
            "type": "Identifier",
          },
          "init": {
            "loc": {
              "end": {
                "column": 13,
                "line": 1,
              },
              "start": {
                "column": 10,
                "line": 1,
              },
            },
            "name": "bar",
            "range": [
              10,
              13,
            ],
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 13,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "range": [
            4,
            13,
          ],
          "type": "VariableDeclarator",
        },
      ],
      "kind": "let",
      "loc": {
        "end": {
          "column": 14,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        14,
      ],
      "type": "VariableDeclaration",
    },
  ],
  "comments": [],
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    14,
  ],
  "sourceType": "script",
  "tokens": [
    {
      "loc": {
        "end": {
          "column": 3,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        3,
      ],
      "type": "Keyword",
      "value": "let",
    },
    {
      "loc": {
        "end": {
          "column": 7,
          "line": 1,
        },
        "start": {
          "column": 4,
          "line": 1,
        },
      },
      "range": [
        4,
        7,
      ],
      "type": "Identifier",
      "value": "foo",
    },
    {
      "loc": {
        "end": {
          "column": 9,
          "line": 1,
        },
        "start": {
          "column": 8,
          "line": 1,
        },
      },
      "range": [
        8,
        9,
      ],
      "type": "Punctuator",
      "value": "=",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 1,
        },
        "start": {
          "column": 10,
          "line": 1,
        },
      },
      "range": [
        10,
        13,
      ],
      "type": "Identifier",
      "value": "bar",
    },
    {
      "loc": {
        "end": {
          "column": 14,
          "line": 1,
        },
        "start": {
          "column": 13,
          "line": 1,
        },
      },
      "range": [
        13,
        14,
      ],
      "type": "Punctuator",
      "value": ";",
    },
  ],
  "type": "Program",
}
`;

exports[`parseWithNodeMaps() non string code should correctly convert code to a string for parse() 1`] = `
{
  "body": [
    {
      "expression": {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "raw": "12345",
        "type": "Literal",
        "value": 12345,
      },
      "loc": {
        "end": {
          "column": 5,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        5,
      ],
      "type": "ExpressionStatement",
    },
  ],
  "comments": [],
  "loc": {
    "end": {
      "column": 5,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    5,
  ],
  "sourceType": "script",
  "tokens": [
    {
      "loc": {
        "end": {
          "column": 5,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        5,
      ],
      "type": "Numeric",
      "value": "12345",
    },
  ],
  "type": "Program",
}
`;

exports[`parseWithNodeMaps() non string code should correctly convert code to a string for parseAndGenerateServices() 1`] = `
{
  "body": [
    {
      "expression": {
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          5,
        ],
        "raw": "12345",
        "type": "Literal",
        "value": 12345,
      },
      "loc": {
        "end": {
          "column": 5,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        5,
      ],
      "type": "ExpressionStatement",
    },
  ],
  "comments": [],
  "loc": {
    "end": {
      "column": 5,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    5,
  ],
  "sourceType": "script",
  "tokens": [
    {
      "loc": {
        "end": {
          "column": 5,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        5,
      ],
      "type": "Numeric",
      "value": "12345",
    },
  ],
  "type": "Program",
}
`;
